--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,11 +8,11 @@ on:
 jobs:
   build-and-publish:
     name: Build and Publish Package
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-22.04, windows-latest, macos-latest]
         python-version: [3.8, 3.9, 3.10, 3.11, 3.12]
 
     steps:
