--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -5,6 +5,9 @@ on:
     tags:
       - "v*"
 
+permissions:
+  contents: write
+
 jobs:
   build-and-publish:
     name: Build and Publish Package
@@ -13,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-22.04, windows-latest, macos-latest]
-        python-version: [3.12]
+        python-version: [3.10, 3.11, 3.12]
 
     steps:
       - name: Checkout repository
