--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -30,10 +30,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install build twine
+          python -m pip install cibuildwheel twine
+
 
       - name: Build package
-        run: python -m build
+        run:  python -m cibuildwheel --output-dir dist
 
       - name: Publish to PyPI
         env:
