--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -84,8 +84,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Set up MSVC
-        uses: microsoft/setup-msbuild@v1.1
+      - name: Add msbuild to PATH
+        uses: microsoft/setup-msbuild@v1.3
+
+      - name: Setup MSVC compiler
+        uses: ilammy/msvc-dev-cmd@v1
 
       - name: Install build dependencies
         run: |
@@ -95,11 +98,19 @@ jobs:
       - name: Build wheel
         run: python -m build --wheel
         env:
-          DISTUTILS_USE_SDK: 1
+          DISTUTILS_USE_SDK: "1"
+          MSSdk: "1"
 
-      - name: Repair wheel
-        run: delvewheel repair dist/*.whl -w dist/
-
+      - name: Install and test wheel repair (optional)
+        run: |
+          python -m pip install delvewheel
+          delvewheel repair dist/*.whl -w repaired/ || echo "Wheel repair failed, using original"
+          if (Test-Path "repaired/*.whl") { 
+            Remove-Item dist/*.whl
+            Move-Item repaired/*.whl dist/
+          }
+        shell: powershell
+      
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
@@ -152,5 +163,3 @@ jobs:
           password: ${{ secrets.PYPI_TOKEN }}
           packages-dir: final_dist/
           skip-existing: true
-
-
