--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -103,6 +103,9 @@ jobs:
           choco install winflexbison3 --no-progress
           C:\ProgramData\chocolatey\lib\winflexbison3\tools\win_flex.exe -o sqlidps/lex.yy.c sqlidps/lexer.l
 
+      - name: Print first few lines of lex.yy.c
+        run: Get-Content sqlidps/lex.yy.c -TotalCount 20
+        shell: pwsh
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v1.3
 
